tests/invalid/undefined_parameter_complex_rate.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UndefinedParamComplexRate",
    "description": "Undefined parameter in complex Arrhenius rate expression"
  },
  "reaction_systems": {
    "ChemSystem": {
      "species": {
        "NO": {
          "units": "mol/mol",
          "default": 1e-09
        },
        "O3": {
          "units": "mol/mol",
          "default": 4e-08
        },
        "NO2": {
          "units": "mol/mol",
          "default": 1e-09
        }
      },
      "parameters": {
        "A": {
          "units": "cm^3/molec/s",
          "default": 1.8e-12
        },
        "T": {
          "units": "K",
          "default": 298.15
        }
      },
      "reactions": [
        {
          "id": "arrhenius",
          "substrates": [
            {
              "species": "NO",
              "stoichiometry": 1
            },
            {
              "species": "O3",
              "stoichiometry": 1
            }
          ],
          "products": [
            {
              "species": "NO2",
              "stoichiometry": 1
            }
          ],
          "rate": {
            "op": "*",
            "args": [
              "A",
              {
                "op": "exp",
                "args": [
                  {
                    "op": "/",
                    "args": [
                      {
                        "op": "*",
                        "args": [
                          -1,
                          "undefined_activation_energy"
                        ]
                      },
                      "T"
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    }
  }
}
